Improved introduction of OYR

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -57,7 +57,9 @@ Question: #3
 \date{April, 2019}
 
 \section{Introduction}
-Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintanance, and dissassembling of windfarms in various Seas, primarily the North Sea. The installation and dissassembling projects can often take more than 18 monts, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often in the range of \pounds 100.000 per day, hence a project with multiple vessels over many months can cost tens, if not hundreds, of millions of pounds.  %TODO: Factcheck
+Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintenance, and dissassembly of windfarms in various seas, primarily the North Sea. The installation and dissassembly projects can often take more than 18 monts, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often in the range of \pounds 100.000 per day, hence a project with multiple vessels over many months can cost tens, if not hundreds, of millions of pounds.  Therefore, even small improvements to the schedules can save significant amounts of money. %TODO: Factcheck
+
+Because of that, I would have expected a lot of research in this area had already been done, but this turned out to be less the case than I would have expected. Most research is fairly recent, and there are significant literature gaps. The primary obstracle in this scheduling problem which seperates it from more traditional scheduling problems is the stochasticity, mainly related to the weather conditions. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on big industrial constructions, so they have a limited range of allowed wind speeds and wave heights. Something else which can further limit possible schedules is the inflexibility involved in vessel rental, since vessels of the required caliber cannot be rented on short notice, and often need to be rented for at least some minimum amount of time, so adaptive in-the-moment scheduling is impossible and we cannot simply wait for an expected period of good weather based on real-time data to rent the vessels; if we expected some period to have good weather but this turns out not to be the case, we'll often have the vessels rented but unusable. This means the problem has a lot of undeterministic yet impactful factors which any good solution would have to deal with in some way. 
 
 \section{The project}
 
