Worked on chapter 2, added some notes for first draft

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -57,13 +57,26 @@ Question: #3
 \date{April, 2019}
 
 \section{Introduction} \label{s:intro}
-Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintenance, and dissassembly of windfarms in various seas, primarily the North Sea. The installation and dissassembly projects can often take more than 18 monts, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often on the order of \pounds 100.000 per day, hence a project with multiple vessels over many months can cost tens, if not hundreds, of millions of pounds.  Therefore, even small improvements to the schedules can save significant amounts of money. %TODO: Factcheck
+Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintenance, and dismantling of windfarms in various seas, primarily the North Sea. The installation and dismantling projects can often take up to several years, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often on the order of \pounds 100.000 per day, hence a project with multiple vessels over many months can cost tens, if not hundreds, of millions of pounds.  Therefore, even small improvements to the schedules can save significant amounts of money. %TODO: Factcheck
 
 Because of that, I expected a lot of research in this area had already been done, but this turned out to be less the case than I would have expected. Most research is fairly recent, and there are significant literature gaps. The primary obstracle in this scheduling problem which seperates it from more traditional scheduling problems is the stochasticity, mainly related to the weather conditions. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on big industrial constructions, so they have a limited range of allowed wind speeds and wave heights. Something else which can further limit possible schedules is the inflexibility involved in vessel rental, since vessels of the required caliber cannot be rented on short notice, and often need to be rented for at least some minimum amount of time, so adaptive in-the-moment scheduling is impossible and we cannot simply wait for an expected period of good weather based on real-time data to rent the vessels; if we expected some period to have good weather but this turns out not to be the case, we'll often have the vessels rented but unusable. This means the problem has a lot of undeterministic yet impactful factors which any good solution would have to take into account. 
 
 In this report I will talk about my progress and what I have learned over the past year. First, in \Cref{s:project} I will explain the examined problem in more detail. After that, in \Cref{s:lit}, I will recount the reading I have done over the past year, which was the main focus of my work over the past year. This will include both research on this specific project, and research in the more general field of (stocahstic) scheduling, optimisation and simulation. This will be the main focus of the report, as it was the main focus of my work. In addition to reading up on the state of the current research, I have also started building a Simulator for this problem, which I will discuss in \Cref{s:sim}. Finally, I will summarize my current standing and plans for future work in \Cref{s:concl}. 
 
 \section{The project} \label{s:project}
+In this section I will attempt to summarize the different views I've seen on the project, in enough detail for the reader to understand the rest of the report. I will primarily talk about installation projects, as most of the literature I've read is about those problems. It is likely the dismantling projects are very similar in structure; anything that was build needs to be taken apart. Maintenance projects however will be very different, as they are over a much larger time scale and while the two other types of projects have a set number of tasks that would ideally be completed as fast as possible, the mainenance has a set duration, with a potentially varying number of tasks.
+
+A typical windfarm will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. A typical windfarm might have 100 WTGs and 2 OSPs. Each of these structures has a set of tasks that need to be completed in series for each individual structure, like preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation). Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for seperate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction. This would mean the farm starts making money significantly earlier, and can therefore have big impacts on desired schedules. In some situations the company might even set desired deadline for certain milestones, like 10\% or 50\% of the turbines operating. 
+
+The project can have different objective functions, since there are multiple criteria and desires the company might have. It may directly be maximizing expected costs, or minimizing expected or worst-case delays. Different objective functions will of course lead to different schedules. 
+
+
+%Should I mention sim and opt here?
+%Not too much detail for obj funcs as they'll be handled in s:lit too
+
+%TODO SOON
+%Add references
+%Add subsections in s:lit for types of papers, maybe list papers under subsection as notes
 
 \section{Literature} \label{s:lit}
 
