Added pages and title page

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -51,10 +51,26 @@ Question: #3
 \newcommand{\algorithmicbreak}{\textbf{break}}
 \newcommand{\Break}{\State \algorithmicbreak}
 
+
+
 \begin{document}
-\title{}
-\author{R. Kuipers}
+\title{Simulation and Optimisation of Offshore Renewable Energy Arrays for Minimal Life-Cycle Costs}
+\author{R. Kuipers \\[1cm] Supervisors: \\ Kerem Akartunali \\ Euan Barlow\\[2cm] University of Strathclyde \\ Strathclyde Business School \\ }
 \date{April, 2019}
+
+\maketitle
+
+\pagebreak
+
+\begin{abstract}
+Hello % TODO SOON
+\end{abstract}
+
+\pagebreak
+
+\tableofcontents
+
+\pagebreak
 
 \section{Introduction} \label{s:intro}
 Over the past year, I have been researching scheduling related to offshore windfarm projects; the installation, maintenance, and dismantling of windfarms in various seas, primarily the North Sea. The installation and dismantling projects can often take up to several years, and the lifespan of such farms is about 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often on the order of \pounds 100.000 per day, hence a project with multiple vessels over many months can cost tens, if not hundreds, of millions of pounds.  Therefore, even small improvements to the schedules can save significant amounts of money. %TODO: Factcheck
