--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -1,28 +1,71 @@
-@article{KERKHOVE201758,
-title = "Optimised scheduling for weather sensitive offshore construction projects",
-journal = "Omega",
-volume = "66",
-pages = "58 - 78",
-year = "2017",
-issn = "0305-0483",
-doi = "https://doi.org/10.1016/j.omega.2016.01.011",
-url = "http://www.sciencedirect.com/science/article/pii/S0305048316000128",
-author = "L.-P. Kerkhove and M. Vanhoucke",
-keywords = "Offshore construction, Weather simulation, Stochastic scheduling, Project scheduling",
-abstract = "The significant lead times and costs associated with materials and equipment in combination with intrinsic and weather related variability render the planning of offshore construction projects highly complex. Moreover, the way in which scarce resources are managed has a profound impact on both the cost and the completion date of a project. Hence, schedule quality is of paramount importance to the profitability of the project. A prerequisite to the creation of good schedules is the accuracy of the procedure used to estimate the project outcome when a given schedule is used. Because of the systematic influence of weather conditions, traditional Monte Carlo simulations fail to produce a reliable estimate of the project outcomes. Hence, the first objective of this research is to improve the accuracy of the project simulation by creating a procedure which includes both uncertainty related to the activities and an integrated model of the weather conditions. The weather component has been designed to create realistically correlated wind- and weather conditions for operationally relevant time intervals. The second objective of this research is to optimise the project planning itself by using both general meta-heuristic optimisation approaches and dedicated heuristics which have been specifically designed for the problem at hand. The performance of these heuristics is judged by the expected net present value of the project. The approach presented in this paper is tested on real data from the construction of an offshore wind farm off the Belgian coast and weather data gathered by the Flanders Marine Institute using measuring poles in the North Sea."
+@article{kerkhove2017optimised,
+  title={Optimised scheduling for weather sensitive offshore construction projects},
+  author={Kerkhove, L-P and Vanhoucke, Mario},
+  journal={Omega},
+  volume={66},
+  pages={58--78},
+  year={2017},
+  publisher={Elsevier}
 }
 
-@article{BARLOW2018894,
-title = "A mixed-method optimisation and simulation framework for supporting logistical decisions during offshore wind farm installations",
-journal = "European Journal of Operational Research",
-volume = "264",
-number = "3",
-pages = "894 - 906",
-year = "2018",
-issn = "0377-2217",
-doi = "https://doi.org/10.1016/j.ejor.2017.05.043",
-url = "http://www.sciencedirect.com/science/article/pii/S0377221717304903",
-author = "Euan Barlow and Diclehan Tezcaner Öztürk and Matthew Revie and Kerem Akartunalı and Alexander H. Day and Evangelos Boulougouris",
-keywords = "OR in energy, Mixed methods, Action research, Offshore wind farms, Installation logistics",
-abstract = "With a typical investment in excess of £100 million for each project, the installation phase of offshore wind farms (OWFs) is an area where substantial cost-reductions can be achieved; however, to-date there have been relatively few studies exploring this. In this paper, we develop a mixed-method framework which exploits the complementary strengths of two decision-support methods: discrete-event simulation and robust optimisation. The simulation component allows developers to estimate the impact of user-defined asset selections on the likely cost and duration of the full or partial completion of the installation process. The optimisation component provides developers with an installation schedule that is robust to changes in operation durations due to weather uncertainties. The combined framework provides a decision-support tool which enhances the individual capability of both models by feedback channels between the two, and provides a mechanism to address current OWF installation projects. The combined framework, verified and validated by external experts, was applied to an installation case study to illustrate the application of the combined approach. An installation schedule was identified which accounted for seasonal uncertainties and optimised the ordering of activities."
+@article{barlow2018mixed,
+  title={A mixed-method optimisation and simulation framework for supporting logistical decisions during offshore wind farm installations},
+  author={Barlow, Euan and {\"O}zt{\"u}rk, Diclehan Tezcaner and Revie, Matthew and Akartunal{\i}, Kerem and Day, Alexander H and Boulougouris, Evangelos},
+  journal={European Journal of Operational Research},
+  volume={264},
+  number={3},
+  pages={894--906},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{barlow2014assessment,
+  title={An assessment of vessel characteristics for the installation of offshore wind farms},
+  author={Barlow, E and Tezcaner Ozturk, D and Day, S and Boulougouris, E and Revie, M and Akartunali, K},
+  booktitle={International Conference on Marine Technology ICMT 2014},
+  year={2014}
+}
+
+@article{barlow2017using,
+  title={On using simulation to model the installation process logistics for an offshore wind farm},
+  author={Barlow, Euan and Tezcaner Ozturk, Diclehan and Revie, Matthew and Akartunali, Kerem and Day, Alexander and Boulougouris, Evangelos},
+  year={2017},
+  publisher={University of Strathclyde}
+}
+
+@article{barlow2014support,
+  title={A support tool for assessing the risks of heavy lift vessel logistics in the installation of offshore wind farms},
+  author={Barlow, E and Tezcaner Ozturk, D and Day, AH and Boulougouris, E and Revie, M and Akartunali, K},
+  journal={Marine Heavy Transport \& Lift IV},
+  year={2014}
+}
+
+@article{herroelen2005project,
+  title={Project scheduling under uncertainty: Survey and research potentials},
+  author={Herroelen, Willy and Leus, Roel},
+  journal={European journal of operational research},
+  volume={165},
+  number={2},
+  pages={289--306},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{artigues2000polynomial,
+  title={A polynomial activity insertion algorithm in a multi-resource schedule with cumulative constraints and multiple modes},
+  author={Artigues, Christian and Roubellat, Francois},
+  journal={European Journal of Operational Research},
+  volume={127},
+  number={2},
+  pages={297--316},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{sevaux2002genetic,
+  title={Genetic algorithm for robust schedules}
+  author={Sevaux, Marc and Sörensen, Kenneth}
+  journal={8th International Workshop on Project Management and Scheduling (PMS 2002)}
+  pages={330-333}
+  year{2002}
 }
