--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -63,9 +63,19 @@
 }
 
 @article{sevaux2002genetic,
-  title={Genetic algorithm for robust schedules}
-  author={Sevaux, Marc and Sörensen, Kenneth}
-  journal={8th International Workshop on Project Management and Scheduling (PMS 2002)}
-  pages={330-333}
-  year{2002}
+  title={Genetic algorithm for robust schedules},
+  author={Sevaux, Marc and Sörensen, Kenneth},
+  journal={8th International Workshop on Project Management and Scheduling (PMS 2002)},
+  pages={330-333},
+  year={2002}
+}
+
+@article{leggate2010crew,
+  title={Modelling crew scheduling in offshore supply vessels},
+  author={Leggate, Alex and Sucu, Seda and Akartunali, Kerem and Meer, Robbert van der},
+  journal={Journal of the Operational Research Society},
+  volume={69},
+  number={6},
+  pages={959-970},
+  year={2018}
 }
